--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -33,7 +33,7 @@ html{
     /* Your content styles */
 
 .cart {
-      height: 70vh;
+      height: 90vh;
       position: sticky;
       top: -90vh; 
       z-index: 100;
@@ -43,6 +43,10 @@ html{
       border-radius: 10px;
       overflow: auto;
     }
+
+.cart-list{
+    padding: 10px;
+}
 
 .cart-list li{
       background-color: rgba(255, 255, 255, 0.226);
